--- a/css/introdução.css
+++ b/css/introdução.css
@@ -1,4 +1,3 @@
-
 .introducao {
     max-width: 1200px;
     padding: 80px 20px;
@@ -35,11 +34,9 @@
 
 .introducao p {
     font-size: 1.5rem;
+    line-height: 1.8rem;
     color: white;
-
 }
-
-
 
 @media (max-width: 1000px) {
     .introducao h1 {
