--- a/css/tecnologias.css
+++ b/css/tecnologias.css
@@ -26,7 +26,7 @@
 
  .tailwind {
   height: 300px;
-  width: 260px;
+  width: 250px;
  }
 
  .swiper-slide p {
@@ -39,6 +39,11 @@
     width: 100%;
     height: 300px;
   }
+
+  .tailwind {
+    height: 300px;
+    width: 200px;
+   }
 
   .swiper-slide img,
   .swiper-slide svg {
